[gd_scene load_steps=11 format=3 uid="uid://d2fboo6vx4wi5"]

[ext_resource type="Script" path="res://Scripts/Entities/Player.gd" id="1_3t3fu"]
[ext_resource type="Texture2D" uid="uid://qstkgaq26p5p" path="res://Assets/Entities/Player/Parachute.png" id="2_ptpc7"]
[ext_resource type="Texture2D" uid="uid://dqxdccubdxkye" path="res://Assets/Entities/Player/Player.png" id="3_up8hw"]
[ext_resource type="FontFile" uid="uid://gshbcghnt66a" path="res://Assets/Font/Silkscreen-Regular.ttf" id="4_6tc1e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dlp2"]
size = Vector2(106, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwkll"]
size = Vector2(36, 16)

[sub_resource type="Animation" id="Animation_5xgs1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_suaeh"]
resource_name = "Shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjctk"]
_data = {
"RESET": SubResource("Animation_5xgs1"),
"Shrink": SubResource("Animation_suaeh")
}

[sub_resource type="LabelSettings" id="LabelSettings_itrj0"]
font = ExtResource("4_6tc1e")

[node name="Player" type="CharacterBody2D"]
position = Vector2(457, 201)
collision_mask = 2
script = ExtResource("1_3t3fu")
metadata/_edit_group_ = true

[node name="Parachute" type="Sprite2D" parent="."]
position = Vector2(-7, 6)
scale = Vector2(6, 6)
texture = ExtResource("2_ptpc7")
centered = false
offset = Vector2(-15.5, -29)

[node name="ParachuteCol" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="ParachuteColShape" type="CollisionShape2D" parent="ParachuteCol"]
position = Vector2(-9, -91.5)
shape = SubResource("RectangleShape2D_5dlp2")

[node name="Cat" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("3_up8hw")

[node name="PlayerColShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_bwkll")

[node name="MeterCounter" type="Timer" parent="."]
wait_time = 0.3

[node name="ChanceTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Smoll" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yjctk")
}

[node name="SmollDuration" type="Timer" parent="."]
wait_time = 5.0

[node name="MultiDuration" type="Timer" parent="."]

[node name="PowerupChanceTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Progress" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBorders" type="ColorRect" parent="Progress"]
layout_mode = 0
offset_left = -47.0
offset_top = 43.0
offset_right = 49.0
offset_bottom = 60.0
color = Color(0, 0, 0, 1)

[node name="ProgressBG" type="ColorRect" parent="Progress"]
layout_mode = 0
offset_left = -44.0
offset_top = 46.0
offset_right = 46.0
offset_bottom = 57.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="ProgressMain" type="ColorRect" parent="Progress"]
layout_mode = 0
offset_left = -44.0
offset_top = 46.0
offset_right = -44.0
offset_bottom = 57.0
color = Color(0.282353, 0.654902, 0, 1)

[node name="Double" type="Label" parent="Progress"]
layout_mode = 0
offset_left = -48.5
offset_top = 60.0
offset_right = -8.5
offset_bottom = 84.0
text = "x2"
label_settings = SubResource("LabelSettings_itrj0")

[connection signal="timeout" from="MeterCounter" to="." method="_on_meter_counter_timeout"]
[connection signal="timeout" from="ChanceTimer" to="." method="_on_chance_timer_timeout"]
[connection signal="timeout" from="SmollDuration" to="." method="_on_smoll_duration_timeout"]
[connection signal="timeout" from="MultiDuration" to="." method="_on_multi_duration_timeout"]
[connection signal="timeout" from="PowerupChanceTimer" to="." method="_on_powerup_chance_timer_timeout"]
